creando los componentes

--- a/src/app/componente/lista-productos/lista-productos.component.html
+++ b/src/app/componente/lista-productos/lista-productos.component.html
@@ -1,1 +1,8 @@
-<p>lista-productos works!</p>
+<div class="row">
+  @for (producto of productos; track $index; let primero = $first) {
+    <!--<app-producto class="col-4 mb-2"    [producto]="producto" >
+    </app-producto>-->
+  }@empty {
+    <div class="alert alert-info">No hay productos</div>
+  }
+</div>
